avoid blocks of grey on mobile iOS

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,7 @@
+body {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 .tab-menu-link {
   margin-right: -2px; // Avoids tabs being > 33% width
 }
